[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Python plaground"
authors = ["Louis Agyapong <47106199+louis-agyapong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
ipython = "^8.6.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
