[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Python plaground"
authors = ["Louis Agyapong <47106199+louis-agyapong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
ipython = "^8.6.0"
mypy = "^0.982"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
